Fixing elements responsitivity for Mediatheque Page on smaller screens

--- a/pages/scss/custom.scss
+++ b/pages/scss/custom.scss
@@ -267,6 +267,7 @@ a{
  @media screen and (max-width: 768px) {
    .avatar {
      width: 4em;
+     margin: 0 0 1em 0;
    }
    .userHeader {
      margin: 0 0 1em 0;
